dynamic content through contents.json

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <div class="header-text-section">
               <div class="header-details">
                 <div class="broadcast-info">
-                  <span class="broadcast-text">ELKE Zaterdag op de AM</span>
-                  <p class="broadcast-text">Precies als vroeger, zoals het hoort.</p>
+                  <span class="broadcast-text"></span>
+                  <p class="broadcast-text"></p>
                 </div>
-                <img src="images/logot_test.png" alt="Radio Intiem Logo" class="header-logo" />
+                <img src="images/logo-header.png" alt="Radio Intiem Logo" class="header-logo" />
               </div>
             </div>
           </div>
@@ -36,368 +36,47 @@
             <span class="hamburger-line"></span>
             <span class="hamburger-line"></span>
           </button>
-          <ul class="nav-list" id="nav-menu">
-            <li><a href="#geschiedenis" class="nav-link">Geschiedenis</a></li>
-            <li><a href="#uitzenddagen" class="nav-link">Uitzenddagen</a></li>
-            <li><a href="#dj-s" class="nav-link">Het team</a></li>
-            <li><a href="#fotoalbum" class="nav-link">Fotoalbum</a></li>
-            <li><a href="#contact" class="nav-link">Contact</a></li>
-          </ul>
+          <ul class="nav-list" id="nav-menu"></ul>
         </nav>
 
         <!-- Main Content Sections -->
         <main class="main-content">
+
+          <!-- Geschiedenis -->
           <section id="geschiedenis" class="section section-1">
-            <h2>Geschiedenis Radio Intiem</h2>
+            <h2></h2>
             <div class="history-container">
-              <div class="history-story">
-
-                <div class="story-block">
-                  <h3>Het begin</h3>
-                  <p>
-                    Radio Intiem is in 1984 opgezet door Cor Hendriks die al een (piraten-) radio verleden had met Radio Sunshine, later werden dat nog respectievelijk Radio Tornado, Radio One Hope, Radio 't Hof van Holland, Radio West en <b>last, but not least: Radio Intiem!</b>
-                  </p>
-                  <p>
-                    Deze laatste zender was tot circa 1995 in de lucht op de FM op verschillende frequenties.
-                  </p>
-                </div>
-
-                <div class="story-block">
-                  <h3>Overheid</h3>
-                  <p>
-                    Door het veranderende beleid van de overheid, door hele hoge boetes op te leggen, werd het de piratenzenders onmogelijk gemaakt om nog door te gaan met uitzenden. De reden hiervoor was om de weg vrij te maken voor de officiële regionale zenders als Radio West, WOS en Radio Rijnmond.
-                  </p>
-                  <div class="quote">
-                    "We fought the law, but the law won" (naar Sonny Curtis), maar anno 2025 is Radio Intiem wel legaal: "The Times They Are a-Changin'" (Bob Dylan).
-                  </div>
-                </div>
-
-                <div class="story-block">
-                  <h3>Ander geluid</h3>
-                  <p>
-                    Het concept was en is nu nog steeds: een ander geluid te laten horen dan wat de toenmalige piraten, legale regionale en Hilversumse zender(s) toen brachten dus zonder reclames, nieuwsberichten, filemeldingen etc.
-                  </p>
-                  <p>
-                    Met een muzikale mix van vooral <strong>Pop-Rock-Punk-New Wave-Country-Gouwe Ouwes-Nederbeat-Ska-Reggae</strong>, maar geen smartlappen, disco, rap, house, hardcore etc. (Een enkele uitzondering daargelaten, moet kunnen want we doen het ook voor de lol). Dat laten we graag over aan de andere stations.
-                  </p>
-                  <p>
-                    Nu dus legaal op de middengolf en ook via een stream te beluisteren.
-                  </p>
-                </div>
-
-                <div class="story-block">
-                  <h3>Waslijst van toenmalige DJs</h3>
-                  <div class="dj-list">
-                    <p>
-                      Dit waren de namen van de toenmalige dj's op Radio Intiem: <strong>Cor Hendriks, Johan Peters, Henk Hollander, Sjees van Puffelen, Dr. Cruel, Criquielion, Eddie Addict, Lies, Rudi V., The Fonz, de 2 Farmers.</strong>
-                    </p>
-                  </div>
-                  <div class="note">
-                    <strong>NB:</strong> In de nieuwe opzet keren Cor Hendriks en Eddie Addict (na te zijn afgekickt gaat hij nu door het leven als Kees Cornelissen) terug.
-                  </div>
-                  <p>
-                    Nieuw in het team zijn <strong>Theo van Dam, Ronald Bakker en Freek Valkhoff</strong>. Deze gasten hebben hun sporen reeds elders verdient bij diverse stations.
-                  </p>
-                </div>
-
-              </div>
-
-              <div class="timeline">
-                <div class="timeline-item">
-                  <div class="timeline-year">1984</div>
-                  <div class="timeline-content">
-                    <h3>Het Begin - Radio Intiem opgericht door Cor Hendriks</h3>
-                    <ul>
-                      <li>Cor had al ervaring met piratenzenders: Radio Sunshine, Radio Tornado, Radio One Hope, Radio 't Hof van Holland, Radio West</li>
-                    </ul>
-                  </div>
-                </div>
-
-                <div class="timeline-item">
-                  <div class="timeline-year">1984-1995</div>
-                  <div class="timeline-content">
-                    <h3>De FM Jaren - Radio Intiem op de FM</h3>
-                    <ul>
-                      <li>DJ team: Cor Hendriks, Johan Peters, Henk Hollander, Sjees van Puffelen, Dr. Cruel, Criquielion, Eddie Addict, Lies, Rudi V., The Fonz, de 2 Farmers</li>
-                      <li>Concept: Ander geluid zonder reclames, nieuws of filemeldingen</li>
-                      <li>Muziek: Pop-Rock-Punk-New Wave-Country-Gouwe Ouwes-Nederbeat-Ska-Reggae</li>
-                    </ul>
-                  </div>
-                </div>
-
-                <div class="timeline-item">
-                  <div class="timeline-year">Circa 1995</div>
-                  <div class="timeline-content">
-                    <h3>Overheid grijpt in - Einde FM Uitzendingen</h3>
-                    <ul>
-                      <li>Hoge boetes voor piratenzenders</li>
-                      <li>Ruimte maken voor officiële regionale zenders (Radio West, WOS en Radio Rijnmond)</li>
-                      <li>"We fought the law, but the law won" (Sonny Curtis)</li>
-                    </ul>
-                  </div>
-                </div>
-
-                <div class="timeline-item">
-                  <div class="timeline-year">2025</div>
-                  <div class="timeline-content">
-                    <h3>Terugkeer - Radio Intiem nu legaal </h3>
-                    <ul>
-                      <li>22 november eerste officiële legale uitzending!</li>
-                      <li>Uitzendingen op middengolf + stream</li>
-                      <li>"The Times They Are a-Changin'" (Bob Dylan)</li>
-                      <li>Terugkerende DJ's: Cor Hendriks, Eddie Addict (nu Kees Cornelissen)</li>
-                      <li>Nieuwe DJ's: Theo van Dam, Ronald Bakker, Freek Valkhoff</li>
-                    </ul>
-                  </div>
-                </div>
+              <div class="history-story"></div>
+              <div class="timeline"></div>
             </div>
           </section>
 
+          <!-- Uitzenddagen -->
           <section id="uitzenddagen" class="section section-2">
-            <h2>Uitzenddagen</h2>
-            <div class="schedule-container">
-              <div class="schedule-header">
-                <h3>Vrijdag Programmering</h3>
-                <p class="schedule-subtitle">Vrijdagmiddag te beluisteren via de stream</p>
-              </div>
-              <div class="schedule-grid">
-                <div class="schedule-item">
-                  <div class="time-slot">14:00 - 00:00</div>
-                  <div class="program-info">
-                    <h4 class="program-title">Nonstop Muziek</h4>
-                  </div>
-                </div>
-              </div>
-              <div class="schedule-header">
-                <h3>Zaterdag Programmering</h3>
-                <p class="schedule-subtitle">Elke zaterdag van 07:00 tot 19:00 op AM 1008 KHZ</p>
-              </div>
-
-              <div class="schedule-grid">
-                <div class="schedule-item">
-                  <div class="time-slot">07:00 - 09:00</div>
-                  <div class="program-info">
-                    <h4 class="program-title">Nonstop Muziek</h4>
-                  </div>
-                </div>
-
-                <div class="schedule-item">
-                  <div class="time-slot">09:00 - 11:00</div>
-                  <div class="program-info">
-                    <h4 class="program-title">Cor Hendriks - Ochtendprogramma</h4>
-                  </div>
-                </div>
-
-                <div class="schedule-item">
-                  <div class="time-slot">11:00 - 13:00</div>
-                  <div class="program-info">
-                    <h4 class="program-title">Freek Valkhof - Gouwe oude </h4>
-                  </div>
-                </div>
-
-                <div class="schedule-item">
-                  <div class="time-slot">13:00 - 15:00</div>
-                  <div class="program-info">
-                    <h4 class="program-title">Ronald Bakker - De Bakker show</h4>
-                  </div>
-                </div>
-
-                <div class="schedule-item">
-                  <div class="time-slot">15:00 - 17:00</div>
-                  <div class="program-info">
-                    <h4 class="program-title">Theo van Dam - Singles only </h4>
-                  </div>
-                </div>
-
-                <div class="schedule-item">
-                  <div class="time-slot">17:00 - 19:00</div>
-                  <div class="program-info">
-                    <h4 class="program-title">Kees Cornelissen - Progressieve show</h4>
-                  </div>
-                </div>
-              </div>
-
-              <div class="schedule-footer">
-                <div class="frequency-info">
-                  <span class="frequency-label">Luister op:</span>
-                  <span class="frequency-value">AM 1008 KHZ</span>
-                  <span class="frequency-value">Stream</span>
-                </div>
-                <div class="broadcast-info">
-                  <span class="broadcast-label"></span>
-                  <span class="broadcast-time">Zaterdag 07:00 - 19:00</span>
-                  <span class="broadcast-time">Vrijdag & zaterdag</span>
-                </div>
-              </div>
-            </div>
+            <h2></h2>
+            <div class="schedule-container"></div>
           </section>
 
+          <!-- Het team -->
           <section id="dj-s" class="section section-3">
-            <h2>Het team</h2>
+            <h2></h2>
             <div class="dj-showcase">
-              <div class="dj-grid">
-                <div class="dj-card">
-                  <div class="dj-photo dj-photo-placeholder" data-dj="1">
-                    <span class="dj-placeholder-text">H</span>
-                  </div>
-                  <div class="dj-info">
-                    <h3 class="dj-name">Cor Hendriks</h3>
-                    <p class="dj-specialty">Ochtendprogramma</p>
-                    <p class="dj-description">-</p>
-                    <div class="dj-schedule">
-                      <span class="schedule-label">Zaterdag:</span>
-                      <span class="schedule-time">09:00 - 11:00</span>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="dj-card">
-                  <div class="dj-photo dj-photo-placeholder" data-dj="5">
-                    <span class="dj-placeholder-text">V</span>
-                  </div>
-                  <div class="dj-info">
-                    <h3 class="dj-name">Freek Valkhof</h3>
-                    <p class="dj-specialty">Gouwe oude</p>
-                    <p class="dj-description">-</p>
-                    <div class="dj-schedule">
-                      <span class="schedule-label">Zaterdag:</span>
-                      <span class="schedule-time">11:00 - 13:00</span>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="dj-card">
-                  <div class="dj-photo dj-photo-placeholder" data-dj="3">
-                    <span class="dj-placeholder-text">B</span>
-                  </div>
-                  <div class="dj-info">
-                    <h3 class="dj-name">Ranald Bakker</h3>
-                    <p class="dj-specialty">De Bakker show</p>
-                    <p class="dj-description">-</p>
-                    <div class="dj-schedule">
-                      <span class="schedule-label">Zaterdag:</span>
-                      <span class="schedule-time">13:00 - 17:00</span>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="dj-card">
-                  <div class="dj-photo dj-photo-placeholder" data-dj="4">
-                    <span class="dj-placeholder-text">D</span>
-                  </div>
-                  <div class="dj-info">
-                    <h3 class="dj-name">Theo van Dam</h3>
-                    <p class="dj-specialty">Singles only</p>
-                    <p class="dj-description">-</p>
-                    <div class="dj-schedule">
-                      <span class="schedule-label">Zaterdag:</span>
-                      <span class="schedule-time">15:00 - 17:00</span>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="dj-card">
-                  <div class="dj-photo dj-photo-placeholder" data-dj="2">
-                    <span class="dj-placeholder-text">C</span>
-                  </div>
-                  <div class="dj-info">
-                    <h3 class="dj-name">Kees Cornelissen</h3>
-                    <p class="dj-specialty">Progressieve show</p>
-                    <p class="dj-description">-</p>
-                    <div class="dj-schedule">
-                      <span class="schedule-label">Zaterdag:</span>
-                      <span class="schedule-time">17:00 - 19:00</span>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="dj-card">
-                  <div class="dj-photo dj-photo-placeholder" data-dj="6">
-                    <span class="dj-placeholder-text">H</span>
-                  </div>
-                  <div class="dj-info">
-                    <h3 class="dj-name">Henk Hollander</h3>
-                    <p class="dj-specialty">Technicus</p>
-                    
-                  </div>
-                </div>
-              </div>
+              <div class="dj-grid"></div>
             </div>
           </section>
 
+          <!-- Fotoalbum -->
           <section id="fotoalbum" class="section section-4">
             <h2>Fotoalbum</h2>
             <div class="photo-album">
-              <div class="photo-grid">
-                <div class="photo-item" data-image="album/IMG-20260219-WA0000.jpg">
-                  <img src="album/IMG-20260219-WA0000.jpg" alt="" loading="lazy" />
-                </div>
-                <div class="photo-item" data-image="album/IMG-20260219-WA0001.jpg">
-                  <img src="album/IMG-20260219-WA0001.jpg" alt="" loading="lazy" />
-                </div>
-                <div class="photo-item" data-image="album/20251212_092503.jpg">
-                  <img src="album/20251212_092503.jpg" alt="" loading="lazy" />
-                </div>
-                <div class="photo-item" data-image="album/20251212_093325.jpg">
-                  <img src="album/20251212_093325.jpg" alt="" loading="lazy" />
-                </div>
-                <div class="photo-item" data-image="album/IMG-20240215-WA0003.jpg">
-                  <img src="album/IMG-20240215-WA0003.jpg" alt="" loading="lazy" />
-                </div>
-                <div class="photo-item" data-image="album/Afbeelding (164).jpg">
-                  <img src="album/Afbeelding (164).jpg" alt="" loading="lazy" />
-                </div>
-                <div class="photo-item" data-image="album/IMG-20241028-WA0001.jpeg">
-                  <img src="album/IMG-20241028-WA0001.jpeg" alt="" loading="lazy" />
-                </div>
-                <div class="photo-item" data-image="album/20251208_151516.jpg">
-                  <img src="album/20251208_151516.jpg" alt="" loading="lazy" />
-                </div>
-                <div class="photo-item" data-image="album/logo.jpg">
-                  <img src="album/logo.jpg" alt="" loading="lazy" />
-                </div>
-              </div>
+              <div class="photo-grid"></div>
             </div>
           </section>
 
+          <!-- Contact -->
           <section id="contact" class="section section-5">
-            <h2>Contact</h2>
-            <div class="contact-container">
-              <div class="contact-info">
-                <h3>Neem Contact Op</h3>
-                <p class="contact-description">
-                  Heb je vragen, opmerkingen of wil je een muziekverzoek doen?
-                  Stuur ons een email en we nemen zo snel mogelijk contact met je op.
-                </p>
-
-                <div class="email-info">
-                  <div class="email-item">
-                    <div class="email-icon">📧</div>
-                    <div class="email-details">
-                      <h4>Algemene Vragen & Verzoeken</h4>
-                      <a href="mailto:radiointiem@gmail.com" class="email-link">radiointiem@gmail.com</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="contact-container">
-                <div class="contact-info">
-                  <h3>MyTuner Radio</h3>
-                  <p class="contact-description">
-                    Je kan ons ook beluisteren via MyTunerRadio: 
-                  </p>
-  
-                  <div class="email-info">
-                    <div class="email-item">
-                      <div class="email-details">
-                        <h4>URL:</h4>
-                        <a href="https://mytuner-radio.com/nl/radio/radio-intiem-516569/" class="email-link">www.mytuner-radio.com</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-            </div>
+            <h2></h2>
+            <div class="contact-container"></div>
           </section>
 
           <!-- Full-width footer image below Contact -->
@@ -444,7 +123,7 @@
             <div class="player-status">
               <div class="frequency-display">
                 <span class="freq-label">AM</span>
-                <span class="freq-value">1008 KHZ</span>
+                <span class="freq-value"></span>
               </div>
               <div id="signal-indicator" class="signal-indicator offline-indicator">
                 <span class="offline-cross">✕</span>
